use the Base64 class from bouncycastle instead of the sun one which might be discarded in the future versions